--- a/index.html
+++ b/index.html
@@ -9,18 +9,28 @@
     <script src="js/jquery-1.12.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="imagens/icone.png" >
- 	<title>Padaria Palmeiras</title>
+    <title>Padaria Palmeiras</title>
  </head>
 <body>
-	<div class="container-fluid topo hidden-xs">
-		<span class="glyphicon glyphicon-envelope"></span><p>palmeriaspadaria@gmail.com</p>  
-		<span class="glyphicon glyphicon-earphone"></span><p>(31) 35987804</p>
-		
-		<span class="glyphicon glyphicon-map-marker"></span><p>Avenida das palmeiras</p>
-	</div>  	
-    <!--NavBar-->	
+    <div class="container-fluid topo hidden-xs">
+        <div class = "row mtopo">
+            <div class="col-md-3 ">
+                <span class="glyphicon glyphicon-envelope"></span><p>palmeriaspadaria@gmail.com</p>  
+            </div>
+            <div class="col-md-3">
+                <span class="glyphicon glyphicon-earphone"></span><p>(31) 35987804</p>
+            </div>
+            <div class="col-md-3">
+                <span class="glyphicon glyphicon-hourglass"></span><p>Aberto de 7h as 20h</p>
+            </div>
+            <div class="col-md-3 ">
+                <span class="glyphicon glyphicon-map-marker"></span><p>Avenida das palmeiras</p>
+            </div>
+        </div>
+    </div>      
+    <!--NavBar-->   
 <div class="nav-wrapper">
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="20">
+    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="10">
         <div class="container text-center">
             <div class="navbar-header">
 
@@ -58,7 +68,7 @@
                 </div>
     </nav>
     </div>
-     	<!--Carousel -->
+        <!--Carousel -->
         <div class= "cover">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
@@ -94,35 +104,38 @@
         <div class="container-fluid">
             <div class="row about text-justify">
                 <div class="col-xs-12 col-md-8">
-                   	<h3>sobre</h3>
-					<h1> A PADARIA </h1>
-					<p> Fundada em 2005, a Padaria Palmeiras vem desde sempre produzindo e comercializando produtos de primeira qualidade. Tendo uma visão de sempre inovar, traz novos sabores ao paladar dos clientes e amigos.
-				</div>
+                    <h3>sobre</h3>
+                    <h1> A PADARIA </h1>
+                    <p> Fundada em 2005, a Padaria Palmeiras vem desde sempre produzindo e comercializando produtos de primeira qualidade. Tendo uma visão de sempre inovar, traz novos sabores ao paladar dos clientes e amigos.
+                </div>
                 <div class="col-xs-12 col-md-4">
                     <img class="img-responsive imgabout" src="imagens/logo.png">
-				</div>
+                </div>
             </div>
             <div class="row welcome ">
                 <div class="col-xs-12 col-md-8">
-                   	<h3 class="text-left">conheça</h3>
-					<h1>SEJAM BEM VINDOS</h1>
-					<p class="text-justify">Visite as páginas do site, através do menu para visualizar nossos produtos e serviços e conhecer nossa padaria. Não esqueça de vir experimentar nossos deliciosos pães, bolos e lanches. Estamos abertos de segunda a sábado das 6 da manhã até as 8 da noite, e no domingo das 6 da manhã, até as 12 horas.
-				</div>
+                    <h3 class="text-left">conheça</h3>
+                    <h1>SEJAM BEM VINDOS</h1>
+                    <p class="text-justify">Visite as páginas do site, através do menu para visualizar nossos produtos e serviços e conhecer nossa padaria. Não esqueça de vir experimentar nossos deliciosos pães, bolos e lanches. Estamos abertos de segunda a sábado das 6 da manhã até as 8 da noite, e no domingo das 6 da manhã, até as 12 horas.
+                </div>
                 <div class="col-xs-12 col-md-4">
                     <img class="img-responsive img-rounded imgwelcome" src="imagens/img2.png">
-				</div>
+                </div>
             </div>
             <div class="row footerInfo">
                 <div class="col-xs-12 col-md-12 hidden-xs">
                     <div class="row info">
-                        <div class="col-xs-4 col-md-4 pull-left">
+                        <div class="col-md-3 ">
                             <span class="glyphicon glyphicon-envelope"></span><p>palmeriaspadaria@gmail.com</p>  
-        		        </div>
-                        <div class="col-xs-4 col-md-4">
+                        </div>
+                        <div class="col-md-3">
                             <span class="glyphicon glyphicon-earphone"></span><p>(31) 35987804</p>
-        		        </div>
-        		        <div class="col-xs-4 col-md-4 pull-right">
-        		            <span class="glyphicon glyphicon-map-marker"></span><p>Avenida das palmeiras</p>    
+                        </div>
+                        <div class="col-md-3">
+                            <span class="glyphicon glyphicon-hourglass"></span><p>Aberto de 7h as 20h</p>
+                        </div>
+                        <div class="col-md-3 ">
+                            <span class="glyphicon glyphicon-map-marker"></span><p>Avenida das palmeiras</p>
                         </div>
                     </div>
                 </div>
@@ -145,7 +158,7 @@
                         <li><a href="contato.html">Contato</a></li>
                         <li><a href="localizacao.html">Localização</a></li>
                         <li><a href="servicos.html">Serviços</a></a></li>
-	                    <li><a href="cardapio.html">Cardápio</a></a></li>
+                        <li><a href="cardapio.html">Cardápio</a></a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-md-12" >
@@ -164,22 +177,22 @@
      
     
         <script>
-        	$(function(){
-   				$("#home").addClass("current");
-			});
+            $(function(){
+                $("#home").addClass("current");
+            });
 
 
             jQuery(window).scroll(function(){
-            if(jQuery(this).scrollTop() > 50 && jQuery(window).width() > 786) {
+            if(jQuery(this).scrollTop() > 10 && jQuery(window).width() > 786) {
                 jQuery('#logo').fadeOut('slow');
                 jQuery('.navbar').css('margin-top','-180px');
             }
-            if(jQuery(this).scrollTop() < 50 ) {
+            if(jQuery(this).scrollTop() < 10 ) {
                 jQuery('#logo').fadeIn('slow');
                 jQuery('.navbar').css('margin-top','0px');
             }
             });
- 	    </script>
+        </script>
 
 
 
