--- a/contato.html
+++ b/contato.html
@@ -32,9 +32,18 @@
             </div>
         </div>
     </div>      
-    <!--NavBar-->   
-<div class="nav-wrapper">
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="10">
+    <!--NavBar--> 
+<div id="menu-bar">
+    <ul class="menu-bar  hidden-xs">
+        <li id="home"><a href="index.html">Home</a></li>
+        <li id="contato"><a href="contato.html">Contato</a></li>
+        <li id="localizacao"><a href="localizacao.html">Localização</a></li>
+        <li id="servicos"><a href="servicos.html">Serviços</a></a></li>
+        <li id="cardapio"><a href="cardapio.html">Cardápio</a></a></li>
+    </ul>    
+</div>  
+<div class="nav-wrapper ">
+    <nav class="navbar navbar-default ">
         <div class="container text-center">
             <div class="navbar-header">
 
@@ -54,14 +63,14 @@
             </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav  center hidden-xs">
-                        <li id="home"><a href="index.html">Home</a></li>
-                        <li id="contato"><a href="contato.html">Contato</a></li>
-                        <li id="localizacao"><a href="localizacao.html">Localização</a></li>
-                        <li id="servicos"><a href="servicos.html">Serviços</a></a></li>
-                        <li id="cardapio"><a href="cardapio.html">Cardápio</a></a></li>
+                        <li id=""><a href="index.html">Home</a></li>
+                        <li id=""><a href="contato.html">Contato</a></li>
+                        <li id=""><a href="localizacao.html">Localização</a></li>
+                        <li id=""><a href="servicos.html">Serviços</a></a></li>
+                        <li id=""><a href="cardapio.html">Cardápio</a></a></li>
                     </ul>
                 </div>
-                 <div class="collapse navbar-collapse" id="myNavbar">
+                <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav visible-xs">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -70,12 +79,13 @@
                         <li><a href="cardapio.html">Cardápio</a></a></li>
                     </ul>
                 </div>
+        </div>
     </nav>
-    </div>
+</div>
     <div class="container-fluid text-center">
         <div class="row welcome text-justify text-center">
             <h1 class="text-center">Fale Conosco</h1>
-            <div class="col-xs-6 cold-md-6 ">
+            <div class="col-xs-6 cold-md-6 hidden-xs">
                 <br></br>
                 <h4 class="text-left">Você pode entrar conosco pelos telefones: </h4>
                     <p>(31) 3511-7175</p>
@@ -85,10 +95,10 @@
                     <p>palmerias padaria @gmail.com</p>
 
             </div>
-            <div class="col-xs-6 col-md-6 mobile-left pull-right">
+            <div class="col-xs-12 col-md-6 mobile-left pull-right">
 
                 <form class="form-horizontal">
-                    <h4 class="text-center">Se preferir utilize o formulario</h4>
+                    <h4 class="text-center hidden-xs">Se preferir utilize o formulario</h4>
                     <div class="form-group">
                         <label for="email">Nome:</label>
                         <div>
@@ -125,9 +135,7 @@
                         <textarea class="form-control" rows="5" id="mensagem"></textarea>
                     </div>
                     <div class="form-group">
-                        <div>
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </div>
+                            <button type="submit" class="btn-contato">Submit</button>
                     </div>
                 </form>
             </div>
@@ -264,17 +272,39 @@
                 $("#contato").addClass("current");
             });
 
-
-            jQuery(window).scroll(function(){
-            if(jQuery(this).scrollTop() > 30 && jQuery(window).width() > 786) {
-                jQuery('#logo').fadeOut('slow');
-                jQuery('.navbar').css('margin-top','-180px');
-            }
-            if(jQuery(this).scrollTop() < 30 ) {
-                jQuery('#logo').fadeIn('slow');
-                jQuery('.navbar').css('margin-top','0px');
-            }
+var $document = $(document),
+$element = $('#menu-bar');
+$nav = $('.navbar');
+$nav.stop().css({
+       top:'0px',
+       width:'100%',
+       position:'fixed',
+       'z-index':'10000'
+});
+$document.scroll(function() {
+    if(jQuery(window).width() > 786){
+        if ($document.scrollTop() >= 280) {
+            $element.stop().css({
+                top: '0px',
+                position:'relative'
             });
+        } else {
+            $element.stop().css({
+                top: '-200px',
+                position:'relative'
+            });
+        }
+    }else{
+        if ($document.scrollTop() > 0) {
+            $nav.stop().css({
+                   top:'0px',
+                   width:'100%',
+                   position:'fixed',
+                   'z-index':'10000'
+            });
+        }
+    }
+});
     </script>
        
 </body>
