--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
             </div>
         </div>
     </div>      
-    <!--NavBar-->   
-<div class="nav-wrapper">
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="10">
+    <!--NavBar--> 
+<div id="menu-bar">
+    <ul class="menu-bar  hidden-xs">
+        <li id="home"><a href="index.html">Home</a></li>
+        <li id="contato"><a href="contato.html">Contato</a></li>
+        <li id="localizacao"><a href="localizacao.html">Localização</a></li>
+        <li id="servicos"><a href="servicos.html">Serviços</a></a></li>
+        <li id="cardapio"><a href="cardapio.html">Cardápio</a></a></li>
+    </ul>    
+</div>  
+<div class="nav-wrapper ">
+    <nav class="navbar navbar-default ">
         <div class="container text-center">
             <div class="navbar-header">
 
@@ -51,14 +60,14 @@
             </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav  center hidden-xs">
-                        <li id="home"><a href="index.html">Home</a></li>
-                        <li id="contato"><a href="contato.html">Contato</a></li>
-                        <li id="localizacao"><a href="localizacao.html">Localização</a></li>
-                        <li id="servicos"><a href="servicos.html">Serviços</a></a></li>
-                        <li id="cardapio"><a href="cardapio.html">Cardápio</a></a></li>
+                        <li id=""><a href="index.html">Home</a></li>
+                        <li id=""><a href="contato.html">Contato</a></li>
+                        <li id=""><a href="localizacao.html">Localização</a></li>
+                        <li id=""><a href="servicos.html">Serviços</a></a></li>
+                        <li id=""><a href="cardapio.html">Cardápio</a></a></li>
                     </ul>
                 </div>
-                 <div class="collapse navbar-collapse" id="myNavbar">
+                <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav visible-xs">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -67,8 +76,10 @@
                         <li><a href="cardapio.html">Cardápio</a></a></li>
                     </ul>
                 </div>
+        </div>
     </nav>
-    </div>
+</div>
+<div><br></div>
         <!--Carousel -->
         <div class= "cover">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -81,13 +92,13 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="imagens/im1.png" alt="Chania">
+                        <img src="imagens/im1.png" class="img-carousel">
                     </div>
                     <div class="item">
-                        <img src="imagens/im2.jpg" alt="Chania">
+                        <img src="imagens/im2.jpg" class="img-carousel">
                     </div>
                     <div class="item">
-                        <img src="imagens/im3.png" alt="Flower">
+                        <img src="imagens/im3.png" class="img-carousel">
                     </div>
                 </div>
                 <!-- Left and right controls -->
@@ -182,29 +193,44 @@
 
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);
+$(function(){
+    $("#home").addClass("current");
+});
+var $document = $(document),
+$element = $('#menu-bar');
+$nav = $('.navbar');
+$nav.stop().css({
+       top:'0px',
+       width:'100%',
+       position:'fixed',
+       'z-index':'10000'
+});
+$document.scroll(function() {
+    if(jQuery(window).width() > 786){
+        if ($document.scrollTop() >= 280) {
+            $element.stop().css({
+                top: '0px',
+                position:'relative'
+            });
+        } else {
+            $element.stop().css({
+                top: '-200px',
+                position:'relative'
+            });
+        }
+    }else{
+        if ($document.scrollTop() > 0) {
+            $nav.stop().css({
+                   top:'0px',
+                   width:'100%',
+                   position:'fixed',
+                   'z-index':'10000'
+            });
+        }
+    }
+});
+
 </script>
-  
-    
-        <script>
-            $(function(){
-                $("#home").addClass("current");
-            });
-
-
-            jQuery(window).scroll(function(){
-            if(jQuery(this).scrollTop() > 10 && jQuery(window).width() > 786) {
-                jQuery('#logo').fadeOut('slow');
-                jQuery('.navbar').css('margin-top','-180px');
-            }
-            if(jQuery(this).scrollTop() < 10 ) {
-                jQuery('#logo').fadeIn('slow');
-                jQuery('.navbar').css('margin-top','0px');
-            }
-            });
-        </script>
-
-
-
 </body>
 </html>
     
