--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>      
     <!--NavBar--> 
 <div id="menu-bar">
-    <ul class="menu-bar  hidden-xs">
+    <ul class="menu-bar hidden-xs">
         <li id="home"><a href="index.html">Home</a></li>
         <li id="contato"><a href="contato.html">Contato</a></li>
         <li id="localizacao"><a href="localizacao.html">Localização</a></li>
@@ -79,7 +79,6 @@
         </div>
     </nav>
 </div>
-<div><br></div>
         <!--Carousel -->
         <div class= "cover">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -199,23 +198,15 @@ $(function(){
 var $document = $(document),
 $element = $('#menu-bar');
 $nav = $('.navbar');
-$nav.stop().css({
-       top:'0px',
-       width:'100%',
-       position:'fixed',
-       'z-index':'10000'
-});
 $document.scroll(function() {
     if(jQuery(window).width() > 786){
         if ($document.scrollTop() >= 280) {
             $element.stop().css({
-                top: '0px',
-                position:'relative'
+                top: '0px'
             });
         } else {
             $element.stop().css({
-                top: '-200px',
-                position:'relative'
+                top: '-200px'
             });
         }
     }else{
@@ -225,6 +216,10 @@ $document.scroll(function() {
                    width:'100%',
                    position:'fixed',
                    'z-index':'10000'
+            });
+        }else{
+            $nav.stop().css({
+                position:'relative'
             });
         }
     }
