--- a/contato.html
+++ b/contato.html
@@ -275,23 +275,15 @@
 var $document = $(document),
 $element = $('#menu-bar');
 $nav = $('.navbar');
-$nav.stop().css({
-       top:'0px',
-       width:'100%',
-       position:'fixed',
-       'z-index':'10000'
-});
 $document.scroll(function() {
     if(jQuery(window).width() > 786){
         if ($document.scrollTop() >= 280) {
             $element.stop().css({
-                top: '0px',
-                position:'relative'
+                top: '0px'
             });
         } else {
             $element.stop().css({
-                top: '-200px',
-                position:'relative'
+                top: '-200px'
             });
         }
     }else{
@@ -301,6 +293,10 @@ $document.scroll(function() {
                    width:'100%',
                    position:'fixed',
                    'z-index':'10000'
+            });
+        }else{
+            $nav.stop().css({
+                position:'relative'
             });
         }
     }
