--- a/contato.html
+++ b/contato.html
@@ -275,6 +275,14 @@
 var $document = $(document),
 $element = $('#menu-bar');
 $nav = $('.navbar');
+if(jQuery(window).width() < 786){
+    $nav.stop().css({
+           top:'0px',
+           width:'100%',
+           position:'fixed',
+           'z-index':'10000'
+    });
+}
 $document.scroll(function() {
     if(jQuery(window).width() > 786){
         if ($document.scrollTop() >= 280) {
@@ -293,10 +301,6 @@ $document.scroll(function() {
                    width:'100%',
                    position:'fixed',
                    'z-index':'10000'
-            });
-        }else{
-            $nav.stop().css({
-                position:'relative'
             });
         }
     }
