--- a/localizacao.html
+++ b/localizacao.html
@@ -70,7 +70,7 @@
                         <li id=""><a href="cardapio.html">Cardápio</a></a></li>
                     </ul>
                 </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
+                <div class="collapse navbar-collapse desgraca" id="myNavbar">
                     <ul class="nav navbar-nav visible-xs">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -83,8 +83,9 @@
     </nav>
 </div>
     <div class="container-fluid text-center">
+
         <div class="row map text-justify text-center">
-            <h1 class="text-center">Onde Estamos</h1>
+            <h1 class="text-center" style="margin-top: 30px">Onde Estamos</h1>
 
 
             <div class="col-xs-12 col-md-6">
@@ -169,7 +170,14 @@
 var $document = $(document),
 $element = $('#menu-bar');
 $nav = $('.navbar');
-
+if(jQuery(window).width() < 786){
+    $nav.stop().css({
+           top:'0px',
+           width:'100%',
+           position:'fixed',
+           'z-index':'10000'
+    });
+}
 $document.scroll(function() {
     if(jQuery(window).width() > 786){
         if ($document.scrollTop() >= 280) {
@@ -188,10 +196,6 @@ $document.scroll(function() {
                    width:'100%',
                    position:'fixed',
                    'z-index':'10000'
-            });
-        }else{
-            $nav.stop().css({
-                position:'relative'
             });
         }
     }
