--- a/controleContato.html
+++ b/controleContato.html
@@ -18,51 +18,18 @@
     <title>Padaria Palmeiras</title>
 </head>
 <body>
-<!--NavBar--> 
-<div id="menu-bar">
-    <ul class="menu-bar  hidden-xs">
-        <li id="home"><a href="index.html">Home</a></li>
-        <li id="contato"><a href="contato.html">Contato</a></li>
-    </ul>    
-</div>  
-<div class="nav-wrapper ">
-    <nav class="navbar navbar-default ">
-        <div class="container text-center">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>                        
-                </button>
-                <a class="navbar-brand " href="#">
-                    <div id="logo">
-                        <img id="logoimg" class="visible-xs" src="imagens/logo.png" width="75px">
-                        <!-- this one will be visible on mobile -->
-                        <img id="logo" class="hidden-xs" src="imagens/logo.png" width="250px">
-                        <!-- this one will be visible on everything else -->
-                    </div>
-                </a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav  center hidden-xs">
-                    <li id=""><a href="index.html">Home</a></li>
-                    <li id=""><a href="contato.html">Contato</a></li>
-                </ul>
-            </div>
-            <div class="collapse navbar-collapse desgraca" id="myNavbar">
-                <ul class="nav navbar-nav visible-xs">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</div>
+
 <div class="container-fluid text-center content">
   	<div class="row">
   		<div class = "col-md-12">
 		  <h1>Controle de Contato</h1>
-		  <ul class="nav nav-tabs nav-justified">
+		  <ul class="nav nav-tabs nav-justified hidden-xs">
+		    <li class="active"><a data-toggle="tab" href="#fornecedor">Fornecedor</a></li>
+		    <li><a data-toggle="tab" href="#trabalheConosco">Trabalhe Conosco</a></li>
+		    <li><a data-toggle="tab" href="#sugetRecla">Sugestão/Reclamação</a></li>
+		    <li><a data-toggle="tab" href="#outros">Outros</a></li>
+		  </ul>
+		  <ul class="nav nav-tabs nav-mobile visible-xs">
 		    <li class="active"><a data-toggle="tab" href="#fornecedor">Fornecedor</a></li>
 		    <li><a data-toggle="tab" href="#trabalheConosco">Trabalhe Conosco</a></li>
 		    <li><a data-toggle="tab" href="#sugetRecla">Sugestão/Reclamação</a></li>
