Creating css ControleContato

--- a/controleContato.html
+++ b/controleContato.html
@@ -23,18 +23,12 @@
 <div class="container-fluid text-center content">
   	<div class="row">
   		<div class = "col-md-12">
-		  <h1>Controle de Contato</h1>
-		  <ul class="nav nav-tabs nav-justified hidden-xs">
+		  <h1 class="controleContato">Controle de Contato</h1>
+		  <ul class="nav nav-tabs nav-justified ">
 		    <li id="tabFor" class="active"><a data-toggle="tab" href="#fornecedor">Fornecedor</a></li>
 		    <li id="tabTra"><a data-toggle="tab" href="#trabalheConosco">Trabalhe Conosco</a></li>
 		    <li id="tabSug"><a data-toggle="tab" href="#sugRec">Sugestão/Reclamação</a></li>
 		    <li id="tabOut"><a data-toggle="tab" href="#outros">Outros</a></li>
-		  </ul>
-		  <ul class="nav nav-tabs nav-mobile visible-xs">
-		    <li  id="tabFor" class="active"><a data-toggle="tab" href="#fornecedor">Fornecedor</a></li>
-		    <li id="tabTra" ><a data-toggle="tab" href="#trabalheConosco">Trabalhe Conosco</a></li>
-		    <li id="tabSug" ><a data-toggle="tab" href="#sugRec">Sugestão/ Reclamação</a></li>
-		    <li id="tabOut" ><a data-toggle="tab" href="#outros">Outros</a></li>
 		  </ul>
 		</div>
 	</div>
@@ -43,7 +37,7 @@
 			<div class="tab-content">
 				<div id="fornecedor" class="tab-pane fade in active">
 					<h2>Contato de Fornecedores</h2>
-					<div class="table-responsive">
+					<div class="">
 					        <table id="tableFornecedor" class="table table-condensed table-bordered" style="width:100%">
 					           <thead>
 					              <tr>
