Criação da currentRow

--- a/controleContato.html
+++ b/controleContato.html
@@ -41,14 +41,13 @@
 					        <table id="tableFornecedor" class="table table-condensed table-bordered" style="width:100%">
 					           <thead>
 					              <tr>
-					                 <th>Data de Recebimento</th>
-					                 <th>Nome</th>
+					                 <th width = "20%" id="DTCONTA">Data de Recebimento</th>
+					                 <th width = "40%" id="NOMECLIE">Nome</th>
+					                 <th width = "40%" id="EMAIL">Email</th>
 					              </tr>
 					           </thead>
 					           <tbody>
-					           		<tr>
-						           					
-					           		</tr>
+					           
 					           </tbody>
 					        </table>
 					    </div>
@@ -60,17 +59,13 @@
 					        <table class="table table-condensed table-bordered" style="width:100%">
 					           <thead>
 					              <tr>
-					                 <th>Data de Recebimento</th>
-					                 <th>Nome</th>
-					                 <th>Telefone</th>
+					                 <th width = "20%" id="DTCONTA">Data de Recebimento</th>
+					                 <th width = "40%" id="NOMECLIE">Nome</th>
+					                 <th width = "40%" id="EMAIL">Email</th>
 					              </tr>
 					           </thead>
 					           <tbody>
-					           		<tr>
-						           		<td width="15%">January</td>
-	   									<td width="60%">$100</td>
-	   									<td width="25%">x</td>			
-					           		</tr>
+
 					           </tbody>
 					        </table>
 					    </div>
@@ -83,17 +78,13 @@
 					        <table class="table table-condensed table-bordered" style="width:100%">
 					           <thead>
 					              <tr>
-					                 <th>Data de Recebimento</th>
-					                 <th>Nome</th>
-					                 <th>Telefone</th>
+					                 <th width = "20%" id="DTCONTA">Data de Recebimento</th>
+					                 <th width = "40%" id="NOMECLIE">Nome</th>
+					                 <th width = "40%" id="EMAIL">Email</th>
 					              </tr>
 					           </thead>
 					           <tbody>
-					           		<tr>
-						           		<td width="15%">January</td>
-	   									<td width="60%">$100</td>
-	   									<td width="25%">x</td>			
-					           		</tr>
+
 					           </tbody>
 					        </table>
 					    </div>
@@ -106,17 +97,13 @@
 					        <table class="table table-condensed table-bordered" style="width:100%">
 					           <thead>
 					              <tr>
-					                 <th>Data de Recebimento</th>
-					                 <th>Nome</th>
-					                 <th>Telefone</th>
+					                 <th width = "20%" id="DTCONTA">Data de Recebimento</th>
+					                 <th width = "40%" id="NOMECLIE">Nome</th>
+					                 <th width = "40%" id="EMAIL">Email</th>
 					              </tr>
 					           </thead>
 					           <tbody>
-					           		<tr>
-						           		<td width="15%">January</td>
-	   									<td width="60%">$100</td>
-	   									<td width="25%">x</td>			
-					           		</tr>
+
 					           </tbody>
 					        </table>
 					    </div>
