--- a/controleContato.html
+++ b/controleContato.html
@@ -123,17 +123,46 @@
          <span class="glyphicon glyphicon-arrow-left"></span>
          Voltar
          </a>
+         <span class="glyphicon glyphicon-triangle-left swipe-pointer hidden-xs"></span>
          <div class="panel panel-swipe">
             <div class="panel-heading">
                <label name="NRSEQCON">Código da Mensagem: </label>
                <label name="ASSUNTO">Tipo de Contato: </label>
             </div>
             <div class="panel-body">
-               <label name="NOMECLIE" type="input">Nome: </label>
-               <label name="EMAIL" type="input">Email: </label>
-               <label name="TELEFONE" type="input">Telefone: </label>
-               <label name="MENSAGEM" type="textarea">Mensagem: </label>
-               <label name="RESPOSTA" type="textarea">Resposta: </label>	
+               	<div class="container-fluid ">
+        			<div class="row text-justify text-center">
+						<div class="col-md-12">
+                			<form id="" class="form-horizontal" novalidate>
+                    			<div class="control-group form-group">
+                        			<div class="controls">
+               							<label name="NOMECLIE" type="input">Nome: </label>
+               						</div>
+               					</div>
+               					<div class="control-group form-group">
+                        			<div class="controls">
+						               <label name="EMAIL" type="input">Email: </label>
+						            </div>
+						        </div>
+						        <div class="control-group form-group">
+                        			<div class="controls">
+						               <label name="TELEFONE" type="input">Telefone: </label>
+						            </div>
+						        </div>   
+						        <div class="control-group form-group">
+                        			<div class="controls">
+						              	<label name="MENSAGEM" type="textarea">Mensagem: </label>
+						            </div>
+						        </div>
+						        <div class="control-group form-group">
+                        			<div class="controls">   
+						        	    <label name="RESPOSTA" type="textarea">Resposta: </label>	
+               						</div>
+               					</div>	
+               				</form>
+               			</div>
+               		</div>
+               	</div>
             </div>
             <div class="panel-footer">
                <label name="DTCONTA">Data de Recebimento: </label>
