--- a/php/login.html
+++ b/php/login.html
@@ -21,7 +21,7 @@
     <div class = "row">
 		 <div class="col-md-12 loginContent hidden-xs">
 		    <form id="formContato" class="form-horizontal" method="post" action="valida.php">
-		        <span><strong>Login</strong></span>
+		        <span><strong>LOGIN</strong></span>
 		        <div class="control-group form-group">
 		        	<div class="controls">
 						<label>Usuário</label>
@@ -42,7 +42,7 @@
 	<div class = "row">
 		<div class="col-md-12 loginContentM visible-xs">
 		    <form id="formContato" class="form-horizontal" method="post" action="valida.php">
-		        <span><strong>Login</strong></span>
+		        <span><strong>LOGIN</strong></span>
 		        <div class="control-group form-group">
 		        	<div class="controls">
 						<label>Usuário</label>
