--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Ninja</title>
-        <script src="http://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
+        <script src="https://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
         <script src="app.js"></script>
         <script src="NinjaController.js"></script>
     </head>
