--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -7,14 +7,6 @@
     </head>
     <body>
         <div id="fb-root"></div>
-
-          <script>(function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.9&appId=326198331145514";
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));</script>
         <div ng-app = "Ninjas" ng-controller="NinjaController">
             <table>
               <thead>
@@ -30,35 +22,13 @@
               </tbody>
             </table>
             <form class="form-inline" name="formItem">
-              <input type="text" ng-model="item.ASSUNTO">
+              <input type="text" ng-model="item.assunto">
               <button ng-click="adicionaItem()">adicionar ítem</button>
               <button ng-click="removeItem()">reve ítem</button>
             </form>
+            <h1>{{name}}</h1>
+          <button ng-click="FBLogin()"> Facebook Login</button>
           
-            <fb:login-button 
-              scope="public_profile,email"
-              onlogin="checkLoginState();">
-            </fb:login-button>
         </div>
-
-        <script>
-          window.fbAsyncInit = function() {
-            FB.init({
-              appId      : '326198331145514',
-              cookie     : true,
-              xfbml      : true,
-              version    : 'v2.8'
-            });
-            FB.AppEvents.logPageView();   
-          };
-
-          (function(d, s, id){
-             var js, fjs = d.getElementsByTagName(s)[0];
-             if (d.getElementById(id)) {return;}
-             js = d.createElement(s); js.id = id;
-             js.src = "//connect.facebook.net/en_US/sdk.js";
-             fjs.parentNode.insertBefore(js, fjs);
-           }(document, 'script', 'facebook-jssdk'));
-        </script>
     </body>
 </html>
