--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -28,7 +28,10 @@
             </form>
             <h1>{{name}}</h1>
           <button ng-click="FBLogin()"> Facebook Login</button>
-          
+          <fb:login-button 
+              scope="public_profile,email"
+              onlogin="checkLoginState();">
+            </fb:login-button>
         </div>
     </body>
 </html>
