--- a/ninja/login.html
+++ b/ninja/login.html
@@ -2,8 +2,8 @@
     <head>
         <title>Ninja</title>
         <script src="https://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
-        <script src="app.js"></script>
-        <script src="NinjaController.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/NinjaController.js"></script>
     </head>
     <body>
         <div id="fb-root"></div>
