--- a/ninja/login.html
+++ b/ninja/login.html
@@ -27,7 +27,7 @@
               <button ng-click="removeItem()">reve ítem</button>
             </form>
             <h1>{{name}}</h1>
-          <button ng-click="FBLogin()"> Facebook Login</button>
+            <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="console.log('oi')"></div>
           
         </div>
     </body>
