--- a/ninja/login.html
+++ b/ninja/login.html
@@ -2,33 +2,42 @@
     <head>
         <title>Ninja</title>
         <script src="https://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
+        <script src="js/jquery-1.12.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/app.js"></script>
         <script src="js/NinjaController.js"></script>
     </head>
     <body>
+      <div class="page">
         <div id="fb-root"></div>
         <div ng-app = "Ninjas" ng-controller="NinjaController">
-            <table>
-              <thead>
-                <tr>
-                  <th>Assunto</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-repeat="item in itens">
-                  <td>{{ item.ASSUNTO }}</td>
-             
-                </tr>
-              </tbody>
-            </table>
-            <form class="form-inline" name="formItem">
-              <input type="text" ng-model="item.assunto">
-              <button ng-click="adicionaItem()">adicionar ítem</button>
-              <button ng-click="removeItem()">reve ítem</button>
-            </form>
-            <h1>{{name}}</h1>
-            <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="console.log('oi')"></div>
-          
+            <div class="container-fluid ">
+              <div class = "row">
+                <div class="col-md-12 loginImage visible-xs">
+                <img src="imagens/Login.png" width="75%" height="350px">
+                </div>
+                <div class="col-md-12 loginContentM visible-xs">
+                    <form id="formContato" class="form-horizontal" method="post">
+                      <div class="control-group form-group">
+                        <div class="controls">
+                          <input class="inputLogin" type="text" name="usuario" maxlength="50" />
+                        </div>
+                      </div>
+                      <div class="control-group form-group">
+                        <div class="controls">
+                          <input class="inputLogin"  type="password" name="senha" maxlength="50" />
+                        </div>
+                      </div>
+                      <div class="form-actions form-group">
+                        <input  type="submit" value="Entrar" class="btn ">
+                      </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
         </div>
+      </div>
     </body>
 </html>
