--- a/ninja/login.html
+++ b/ninja/login.html
@@ -48,6 +48,7 @@
                     <p>Logar com o Facebook</p>
                   </button>
                 </div>
+                 <button class="publicText" ng-click="testPublication()">Teste</button>
                 <div class="col-md-12 visible-xs">
                   <hr>
                   <p class="signup">Nao tem uma conta? <strong>Cadastre-se.</strong></p>
