--- a/ninja/login.html
+++ b/ninja/login.html
@@ -31,6 +31,7 @@
                       </div>
                       <div class="form-actions form-group">
                         <input  type="submit" value="Entrar" class="btn ">
+                        <button ng-click="testPublication()">Teste</button>
                       </div>
                   </form>                  
                 </div>
