--- a/ninja/login.html
+++ b/ninja/login.html
@@ -30,8 +30,7 @@
                         </div>
                       </div>
                       <div class="form-actions form-group">
-                        <input  type="submit" value="Entrar" class="btn ">
-                        <button ng-click="testPublication()">Teste</button>
+                        <button class="listaamigos" ng-click="testPublication()">
                       </div>
                   </form>                  
                 </div>
@@ -49,7 +48,6 @@
                     <p>Logar com o Facebook</p>
                   </button>
                 </div>
-                 <button class="publicText" ng-click="testPublication()">Teste</button>
                 <div class="col-md-12 visible-xs">
                   <hr>
                   <p class="signup">Nao tem uma conta? <strong>Cadastre-se.</strong></p>
