--- a/ninja/login.html
+++ b/ninja/login.html
@@ -6,6 +6,7 @@
         <script src="js/jquery-1.12.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/NinjaService.js"></script>
         <script src="js/NinjaController.js"></script>
     </head>
     <body>
@@ -30,7 +31,7 @@
                         </div>
                       </div>
                       <div class="form-actions form-group">
-                        <button class="listaamigos" ng-click="testPublication()">
+                        <button class="listaamigos" ng-click="getAmigosBackend()">
                       </div>
                   </form>                  
                 </div>
