--- a/ninja/index.html
+++ b/ninja/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
-    <script src="js/jquery-1.12.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/lib/jquery-1.12.1.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="imagens/icons/ninjaIcon.png" >
-    <script src="https://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
+    <script src="js/lib/angular.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/NinjaService.js"></script>
-    <script src="js/NinjaController.js"></script>
+    <script src="js/ninja/NinjaController.js"></script>
+    <script src="js/ninja/NinjaService.js"></script>
     <title>Ninja Chat</title>
  </head>
-<body ng-app = "Ninjas" ng-controller="NinjaController">
+<body ng-app = "Ninja" ng-controller="NinjaController">
   <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
