--- a/ninja/login.html
+++ b/ninja/login.html
@@ -1,18 +1,18 @@
 <html>
     <head>
         <title>Ninja</title>
-        <script src="https://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
+        <script src="js/lib/angular.js"></script>
         <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
-        <script src="js/jquery-1.12.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="js/lib/jquery-1.12.1.min.js"></script>
+        <script src="js/lib/bootstrap.min.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/NinjaService.js"></script>
-        <script src="js/NinjaController.js"></script>
+        <script src="js/login/LoginController.js"></script>
+        <script src="js/login/LoginService.js"></script>
     </head>
     <body>
       <div class="page">
         <div id="fb-root"></div>
-        <div ng-app = "Ninjas" ng-controller="NinjaController">
+        <div ng-app = "Login" ng-controller="LoginController">
             <div class="container">
               <div class = "row">
                 <div class="col-md-12 loginImage visible-xs">
