Alterações na rotina de login/cadastro.
Alterações na rotina de login/cadastro.

--- a/ninja/index.html
+++ b/ninja/index.html
@@ -39,6 +39,7 @@
          <nav id="menus" class="nav-extended navbar-fixed-top black">
             <div class="nav-wrapper">
                <a href="#!user" data-activates="slide-out" class="button-collapse"><img class="circle" ng-src="{{fotoPerfil}}" style=" width: 40px; margin: 10px 0px 10px -10px"></a>
+               <h5 style="padding-top: 5%;">{{nickname}}</h5>
             </div>
             <div class="nav-content">
                <ul id="tabs-swipe-demo" class="tabs tabs-transparent">
