--- a/ninja/signup.html
+++ b/ninja/signup.html
@@ -16,8 +16,8 @@
       <script src="js/lib/material-kit.js" type="text/javascript"></script>
       <script src="js/lib/angular.js"></script>
       <script src="js/app.js"></script>
-      <script src="js/ninja/NinjaController.js"></script>
-      <script src="js/ninja/NinjaService.js"></script>
+      <script src="js/signup/SignUpController.js"></script>
+      <script src="js/signup/SignUpService.js"></script>
       <!--     Fonts and icons     -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
@@ -27,7 +27,7 @@
       <link href="css/material-kit.css" rel="stylesheet"/>
       <link href="css/login.css" rel="stylesheet" />
    </head>
-   <body class="signup-page"  ng-app = "Ninja" ng-controller="NinjaController">
+   <body class="signup-page"  ng-app = "SignUp" ng-controller="SignUpController">
       <div class="wrapper">
          <div id="fb-root"></div>
             <div class="header header-filter" style="background-image: url('imagens/city.jpg'); background-size: cover; background-position: top center;">
@@ -38,11 +38,11 @@
                            <form class="form" method="" action="">
                               <div class="header header-login text-center">  
                                    <div class="background">
-                                      <img ng-src="{{cover}}">
+                                      <img ng-src="{{cover}}" ng-model="cover">
                                    </div>
                               </div>
                                 <div class="user-view">
-                                   <a><img class="img-circle img-raised img-signup" ng-src="{{fotoPerfil}}" ></a>
+                                   <a><img class="img-circle img-raised img-signup" ng-src="{{picture}}" ng-model="picture"></a>
                                 </div>                               
                               <p class="text-divider">Cadastre-se</p>
                               <div class="content">
@@ -50,25 +50,31 @@
                                  <span class="input-group-addon">
                                     <i class="material-icons">face</i>
                                     </span>
-                                    <input type="text" class="form-control" placeholder="Name" value={{nome}}>
+                                    <input type="text" class="form-control" placeholder="Name" ng-model="name">
                                  </div>
                                  <div class="input-group">
                                     <span class="input-group-addon">
                                     <i class="material-icons">lock_outline</i>
                                     </span>
-                                    <input type="password" placeholder="Password..." class="form-control" />
+                                    <input type="text" placeholder="@" class="form-control"  ng-model="nickname"/>
+                                 </div>
+                                 <div class="input-group">
+                                    <span class="input-group-addon">
+                                    <i class="material-icons">lock_outline</i>
+                                    </span>
+                                    <input type="password" placeholder="Password..." class="form-control"  ng-model="password"/>
                                  </div>
                                  <div class="input-group">
                                  <span class="input-group-addon">
                                     <i class="material-icons">email</i>
                                     </span>
-                                    <input type="text" class="form-control" placeholder="Email" value={{email}}>
+                                    <input type="text" class="form-control" placeholder="Email" ng-model="email">
                                  </div>
                                  <div class="input-group">
                                  <span class="input-group-addon">
                                     <i class="material-icons">short_text</i>
                                     </span>
-                                    <textarea class="form-control" placeholder="Bio" rows="2"></textarea>
+                                    <textarea class="form-control" placeholder="Bio" rows="2" ng-model="bio"></textarea>
 
                                  </div>
                                  
@@ -81,7 +87,7 @@
                                     </div> -->
                               </div>
                               <div class="footer text-center">
-                                 <a class="btn btn-simple btn-danger btn-login btn-lg">Cadastrar</a>
+                                 <a class="btn btn-simple btn-danger btn-login btn-lg" ng-click="cadastrar()">Cadastrar</a>
                               </div>
                               
                            </form>
@@ -91,7 +97,7 @@
                </div>
                <footer class="footer">
                   <div class="container text-center">
-                     <button class="btn btn-info btn-round pull-right floating">
+                     <button class="btn btn-info btn-round pull-right floating" ng-click="cadastrar()">
   <i class="material-icons">arrow_forward</i> Pular
 </button>
                   </div>
