--- a/ninja/index.html
+++ b/ninja/index.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
       <link rel="stylesheet" href="css/materialize.css">
+      <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
       <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/1.0.5/jquery.mobile-events.js"></script>
       <link rel="shortcut icon" href="imagens/icons/ninjaIcon.png" >
@@ -21,7 +21,7 @@
       <ul id="slide-out" class="side-nav">
          <li>
             <div class="user-view">
-               <div class="background">
+               <div class="background" style="height: 90px;">
                   <img ng-src="{{cover}}">
                </div>
                <a href="#!user"><img class="circle" ng-src="{{fotoPerfil}}" ng-click="OpenSideNavThroughLeftSwipe()"></a>
@@ -47,11 +47,11 @@
                </div>
             </nav>
          </div>
-            <div id="test-swipe-1" class=" carousel-item col s12 blue" style="height:100vh;  width: 100%">Test 1</div>
-            <div id="test-swipe-2" class=" carousel-item col s12 red" style="height:1000vh; width: 100%">Test 2</div>
-            <div id="test-swipe-3" class=" carousel-item col s12 green" style="height:100vh; width: 100%">Test 3</div>
-            <div id="test-swipe-4" class=" carousel-item col s12 yellow" style="height:100vh; width: 100%">Test 4</div>
-       
+            <div id="test-swipe-1" class="col s12 blue" style="  width: 100%">Test 1</div>
+            <div id="test-swipe-2" class="col s12 red" style=" width: 100%">Test 2</div>
+            <div id="test-swipe-3" class="col s12 green" style=" width: 100%">Test 3</div>
+            <div id="test-swipe-4" class="col s12 yellow" style=" width: 100%">Test 4</div>
+         </div>
       </div>
       <div class=" col s12 yellow" style="height:100vh; width: 100%">Test 4</div>
 </body>
